--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
 
     <div class="grid-top">
 
-        <!-- NEWS -->
         <div class="panel big">
             <div class="panel-header">📢 NEWS & INFOS</div>
             <p>Wichtige Ankündigungen.</p>
         </div>
 
-        <!-- ABMELDUNGEN -->
-        <div class="panel big" onclick="openAbmeldungModal()">
+        <div class="panel big">
             <div class="panel-top">
                 <span class="panel-header">📅 ABMELDUNGEN</span>
                 <span id="abmCounter" class="badge">0 aktiv</span>
@@ -34,7 +32,6 @@
             <p>Abwesenheiten & Urlaubsanträge.</p>
         </div>
 
-        <!-- BEWERBER -->
         <div class="panel big">
             <div class="panel-top">
                 <span class="panel-header">📝 BEWERBER</span>
@@ -43,24 +40,28 @@
             <p>Neue Bewerbungen prüfen.</p>
         </div>
 
-        <!-- SERVICE -->
         <div class="panel big center">
             <div class="panel-header">📋 Service</div>
         </div>
 
     </div>
 
-    <!-- MANAGEMENT BAR -->
-    <div id="adminPanel"
-         class="management-bar"
-         onclick="location.href='management.html'"
-         style="display:none;">
-        ⭐ Management Center
+    <div class="grid-bottom">
+        <div class="panel small">🍔<br>Orders</div>
+        <div class="panel small">🛒<br>Lager</div>
+        <div class="panel small">🎵<br>Musik</div>
+        <div class="panel small">👕<br>Kleidung</div>
+    </div>
+
+    <div id="adminPanel" class="management-bar"
+         onclick="location.href='management.html'">
+        <div>⭐ Management Center</div>
+        <div>Personalverwaltung & Systemsteuerung</div>
     </div>
 
 </section>
 
-<!-- ================= PIN MODAL ================= -->
+<!-- PIN MODAL -->
 <div class="modal-backdrop" id="pinModal">
     <div class="modal">
         <h2>🔒 PIN ändern</h2>
@@ -70,26 +71,7 @@
     </div>
 </div>
 
-<!-- ================= ABMELDUNG MODAL ================= -->
-<div class="modal-backdrop" id="abmModal">
-    <div class="modal">
-        <h2>📅 Neue Abmeldung</h2>
-
-        <input type="date" id="abmVon">
-        <input type="date" id="abmBis">
-        <input type="text" id="abmGrund" placeholder="Grund">
-
-        <div style="margin-top:15px;">
-            <button onclick="submitAbmeldung()">Einreichen</button>
-            <button onclick="closeAbmModal()" style="margin-left:10px;">
-                Abbrechen
-            </button>
-        </div>
-    </div>
-</div>
-
 <script src="script.js"></script>
-
 <script>
 requireLogin();
 
@@ -103,8 +85,7 @@ document.addEventListener("DOMContentLoaded", () => {
         return;
     }
 
-    document.getElementById("welcomeUser").innerText =
-        "Eingeloggt als: " + user;
+    document.getElementById("welcomeUser").innerText = "Eingeloggt als: " + user;
 
     if (isAdmin()) {
         document.getElementById("adminPanel").style.display = "flex";
@@ -114,12 +95,14 @@ document.addEventListener("DOMContentLoaded", () => {
         document.getElementById("pinModal").classList.add("active");
     }
 
-    updateAbmCounter();
+    document.getElementById("abmCounter").innerText =
+        getAktiveAbmeldungenCount() + " aktiv";
+
+    document.getElementById("bewerberCounter").innerText =
+        getNeueBewerberCount() + " neu";
 });
 
-/* PIN SETZEN */
 function savePin() {
-
     const pin = document.getElementById("newPin").value.trim();
     const user = sessionStorage.getItem("loggedInUser");
     const accs = getAccounts();
@@ -131,12 +114,9 @@ function savePin() {
 
     accs[user].password = pin;
     accs[user].isFirstLogin = false;
-
     saveAccounts(accs);
 
-    document.getElementById("pinModal")
-        .classList.remove("active");
-
+    document.getElementById("pinModal").classList.remove("active");
     alert("PIN erfolgreich gesetzt!");
 }
 </script>
