--- a/management.html
+++ b/management.html
@@ -13,29 +13,32 @@
 
 <section class="dashboard">
 
-    <div class="panel management-wrapper">
+    <div class="panel">
 
-        <div class="management-header">
-            <h2>👤 Personalverwaltung</h2>
+        <h2 style="margin-bottom:20px;">👤 Personalverwaltung</h2>
 
-            <div class="add-user-bar">
-                <input type="text" id="newName" placeholder="Name">
-                <select id="newRole">
-                    <option value="Mitarbeiter">Mitarbeiter</option>
-                    <option value="Management">Management</option>
-                    <option value="Cheffe">Cheffe</option>
-                </select>
-                <button onclick="addUser()">Einstellen</button>
-            </div>
+        <!-- USER HINZUFÜGEN -->
+        <div class="add-user-bar" style="margin-bottom:20px;">
+            <input type="text" id="newName" placeholder="Name">
+            <select id="newRole">
+                <option value="Mitarbeiter">Mitarbeiter</option>
+                <option value="Management">Management</option>
+                <option value="Cheffe">Cheffe</option>
+            </select>
+            <button onclick="addUser()">Einstellen</button>
         </div>
 
+        <!-- TABELLE -->
         <div class="account-table">
+
             <div class="table-head">
                 <span>Name</span>
                 <span>Rang</span>
                 <span style="text-align:right;">Aktionen</span>
             </div>
+
             <div id="userList"></div>
+
         </div>
 
     </div>
@@ -43,29 +46,40 @@
 </section>
 
 <script src="script.js"></script>
+
 <script>
+
+/* ============================= */
+/* AUTH CHECK */
+/* ============================= */
+
 requireLogin();
 if(!isAdmin()) window.location.href = "index.html";
 
-document.addEventListener("DOMContentLoaded", renderUsers);
+/* ============================= */
+/* ROLLEN REIHENFOLGE */
+/* ============================= */
+
+const roleOrder = ["Cheffe", "Management", "Mitarbeiter"];
+
+/* ============================= */
+/* USERS RENDER */
+/* ============================= */
 
 function renderUsers() {
+
     const list = document.getElementById("userList");
     list.innerHTML = "";
+
     const accs = getAccounts();
 
-    const roleOrder = {
-        "Cheffe": 0,
-        "Management": 1,
-        "Mitarbeiter": 2
-    };
-
-    // Accounts in Array umwandeln & sortieren
-    const sortedUsers = Object.keys(accs).sort((a, b) => {
-        return roleOrder[accs[a].role] - roleOrder[accs[b].role];
-    });
+    const sortedUsers = Object.keys(accs).sort((a,b) =>
+        roleOrder.indexOf(accs[a].role) -
+        roleOrder.indexOf(accs[b].role)
+    );
 
     sortedUsers.forEach(name => {
+
         const row = document.createElement("div");
         row.className = "table-row";
 
@@ -74,7 +88,7 @@ function renderUsers() {
             <span class="role-badge ${accs[name].role.toLowerCase()}">
                 ${accs[name].role}
             </span>
-            <div class="action-cell">
+            <div style="text-align:right;">
                 <button class="rank-btn" onclick="uprankUser('${name}')">⬆</button>
                 <button class="rank-btn" onclick="derankUser('${name}')">⬇</button>
                 <button class="delete-btn" onclick="delUser('${name}')">Kündigen</button>
@@ -85,59 +99,95 @@ function renderUsers() {
     });
 }
 
-    const roleOrder = ["Mitarbeiter", "Management", "Cheffe"];
+/* ============================= */
+/* USER HINZUFÜGEN */
+/* ============================= */
 
-function uprankUser(name) {
+function addUser() {
+
+    const name = document.getElementById("newName").value.trim();
+    const role = document.getElementById("newRole").value;
     const accs = getAccounts();
-    const currentRole = accs[name].role;
-    const index = roleOrder.indexOf(currentRole);
 
-    if (index < roleOrder.length - 1) {
-        accs[name].role = roleOrder[index + 1];
+    if(!name) {
+        alert("Name fehlt.");
+        return;
+    }
+
+    if(accs[name]) {
+        alert("Name bereits vergeben.");
+        return;
+    }
+
+    accs[name] = {
+        password: "0000",
+        role: role,
+        isFirstLogin: true
+    };
+
+    saveAccounts(accs);
+    renderUsers();
+    document.getElementById("newName").value = "";
+}
+
+/* ============================= */
+/* USER LÖSCHEN */
+/* ============================= */
+
+function delUser(name) {
+
+    const accs = getAccounts();
+
+    if(Object.keys(accs).length <= 1) {
+        alert("Letzter Account kann nicht gelöscht werden.");
+        return;
+    }
+
+    if(confirm(name + " kündigen?")) {
+        delete accs[name];
         saveAccounts(accs);
         renderUsers();
     }
 }
 
-function derankUser(name) {
-    const accs = getAccounts();
-    const currentRole = accs[name].role;
-    const index = roleOrder.indexOf(currentRole);
+/* ============================= */
+/* UPRANK */
+/* ============================= */
 
-    if (index > 0) {
+function uprankUser(name) {
+
+    const accs = getAccounts();
+    const index = roleOrder.indexOf(accs[name].role);
+
+    if(index > 0) {
         accs[name].role = roleOrder[index - 1];
         saveAccounts(accs);
         renderUsers();
     }
 }
 
-function addUser() {
-    const name = document.getElementById("newName").value.trim();
-    const role = document.getElementById("newRole").value;
+/* ============================= */
+/* DERANK */
+/* ============================= */
+
+function derankUser(name) {
+
     const accs = getAccounts();
+    const index = roleOrder.indexOf(accs[name].role);
 
-    if(name && !accs[name]) {
-        accs[name] = {
-            password: "0000",
-            role: role,
-            isFirstLogin: true
-        };
-        saveAccounts(accs);
-        renderUsers();
-        document.getElementById("newName").value = "";
-    } else {
-        alert("Name ungültig oder bereits vergeben.");
-    }
-}
-
-function delUser(name) {
-    if(confirm(name + " kündigen?")) {
-        const accs = getAccounts();
-        delete accs[name];
+    if(index < roleOrder.length - 1) {
+        accs[name].role = roleOrder[index + 1];
         saveAccounts(accs);
         renderUsers();
     }
 }
+
+/* ============================= */
+/* INIT */
+/* ============================= */
+
+document.addEventListener("DOMContentLoaded", renderUsers);
+
 </script>
 
 </body>
