--- a/management.html
+++ b/management.html
@@ -13,12 +13,23 @@
 
 <section class="dashboard">
 
-    <div class="panel">
+<div class="panel">
 
-        <h2 style="margin-bottom:20px;">👤 Personalverwaltung</h2>
+    <!-- ================= TABS ================= -->
+    <div class="management-tabs">
+        <button class="tab-btn active" onclick="showSection('accounts', this)">Accountverwaltung</button>
+        <button class="tab-btn" onclick="showSection('mitarbeiter', this)">Mitarbeiterliste</button>
+        <button class="tab-btn" onclick="showSection('abmeldungen', this)">Abmeldungen</button>
+        <button class="tab-btn" onclick="showSection('dokumente', this)">Dokumente</button>
+        <button class="tab-btn" onclick="showSection('sheets', this)">Sheets</button>
+    </div>
 
-        <!-- USER HINZUFÜGEN -->
-        <div class="add-user-bar" style="margin-bottom:20px;">
+    <!-- ================= ACCOUNTVERWALTUNG ================= -->
+    <div id="accounts" class="management-section">
+
+        <h2>👤 Personalverwaltung</h2>
+
+        <div class="add-user-bar">
             <input type="text" id="newName" placeholder="Name">
             <select id="newRole">
                 <option value="Mitarbeiter">Mitarbeiter</option>
@@ -28,43 +39,100 @@
             <button onclick="addUser()">Einstellen</button>
         </div>
 
-        <!-- TABELLE -->
         <div class="account-table">
-
             <div class="table-head">
                 <span>Name</span>
                 <span>Rang</span>
                 <span style="text-align:right;">Aktionen</span>
             </div>
-
             <div id="userList"></div>
-
         </div>
 
     </div>
 
+    <!-- ================= MITARBEITERLISTE ================= -->
+    <div id="mitarbeiter" class="management-section" style="display:none;">
+
+        <h2>📋 Mitarbeiterliste</h2>
+
+        <div class="add-user-bar">
+            <input type="text" id="vorname" placeholder="Vorname">
+            <input type="text" id="nachname" placeholder="Nachname">
+            <input type="text" id="telefon" placeholder="Telefon">
+            <input type="number" id="gehalt" placeholder="Gehalt">
+            <button onclick="addMitarbeiter()">Eintragen</button>
+        </div>
+
+        <div class="account-table">
+            <div class="table-head">
+                <span>Name</span>
+                <span>Telefon</span>
+                <span>Gehalt</span>
+                <span style="text-align:right;">Aktionen</span>
+            </div>
+            <div id="mitarbeiterList"></div>
+        </div>
+
+    </div>
+
+    <!-- ================= ABMELDUNGEN ================= -->
+    <div id="abmeldungen" class="management-section" style="display:none;">
+
+        <h2>📅 Abmeldungen verwalten</h2>
+
+        <div class="account-table">
+            <div class="table-head">
+                <span>User</span>
+                <span>Zeitraum</span>
+                <span>Status</span>
+                <span style="text-align:right;">Aktionen</span>
+            </div>
+            <div id="abmList"></div>
+        </div>
+
+    </div>
+
+    <!-- ================= DOKUMENTE ================= -->
+    <div id="dokumente" class="management-section" style="display:none;">
+        <h2>📂 Dokumente</h2>
+        <p>Hier kommen später interne Dokumente rein.</p>
+    </div>
+
+    <!-- ================= SHEETS ================= -->
+    <div id="sheets" class="management-section" style="display:none;">
+        <h2>📊 Sheets</h2>
+        <p>Hier kannst du externe Google Sheets verlinken.</p>
+    </div>
+
+</div>
 </section>
 
 <script src="script.js"></script>
 
 <script>
 
-/* ============================= */
-/* AUTH CHECK */
-/* ============================= */
-
 requireLogin();
 if(!isAdmin()) window.location.href = "index.html";
 
-/* ============================= */
-/* ROLLEN REIHENFOLGE */
-/* ============================= */
+/* ================= TAB SYSTEM ================= */
+
+function showSection(id, btn) {
+    document.querySelectorAll(".management-section")
+        .forEach(sec => sec.style.display = "none");
+
+    document.getElementById(id).style.display = "block";
+
+    document.querySelectorAll(".tab-btn")
+        .forEach(b => b.classList.remove("active"));
+
+    if(btn) btn.classList.add("active");
+
+    if(id === "abmeldungen") renderAbmeldungen();
+}
+
+/* ================= ACCOUNT SYSTEM ================= */
 
 const roleOrder = ["Cheffe", "Management", "Mitarbeiter"];
-
-/* ============================= */
-/* USERS RENDER */
-/* ============================= */
 
 function renderUsers() {
 
@@ -73,12 +141,12 @@ function renderUsers() {
 
     const accs = getAccounts();
 
-    const sortedUsers = Object.keys(accs).sort((a,b) =>
+    const sorted = Object.keys(accs).sort((a,b) =>
         roleOrder.indexOf(accs[a].role) -
         roleOrder.indexOf(accs[b].role)
     );
 
-    sortedUsers.forEach(name => {
+    sorted.forEach(name => {
 
         const row = document.createElement("div");
         row.className = "table-row";
@@ -99,94 +167,141 @@ function renderUsers() {
     });
 }
 
-/* ============================= */
-/* USER HINZUFÜGEN */
-/* ============================= */
-
 function addUser() {
-
     const name = document.getElementById("newName").value.trim();
     const role = document.getElementById("newRole").value;
     const accs = getAccounts();
 
-    if(!name) {
-        alert("Name fehlt.");
-        return;
+    if(name && !accs[name]) {
+        accs[name] = { password:"0000", role:role, isFirstLogin:true };
+        saveAccounts(accs);
+        renderUsers();
+        document.getElementById("newName").value = "";
     }
-
-    if(accs[name]) {
-        alert("Name bereits vergeben.");
-        return;
-    }
-
-    accs[name] = {
-        password: "0000",
-        role: role,
-        isFirstLogin: true
-    };
-
-    saveAccounts(accs);
-    renderUsers();
-    document.getElementById("newName").value = "";
 }
 
-/* ============================= */
-/* USER LÖSCHEN */
-/* ============================= */
-
 function delUser(name) {
-
-    const accs = getAccounts();
-
-    if(Object.keys(accs).length <= 1) {
-        alert("Letzter Account kann nicht gelöscht werden.");
-        return;
-    }
-
     if(confirm(name + " kündigen?")) {
+        const accs = getAccounts();
         delete accs[name];
         saveAccounts(accs);
         renderUsers();
     }
 }
 
-/* ============================= */
-/* UPRANK */
-/* ============================= */
-
 function uprankUser(name) {
-
     const accs = getAccounts();
-    const index = roleOrder.indexOf(accs[name].role);
-
-    if(index > 0) {
-        accs[name].role = roleOrder[index - 1];
+    const i = roleOrder.indexOf(accs[name].role);
+    if(i > 0) {
+        accs[name].role = roleOrder[i-1];
         saveAccounts(accs);
         renderUsers();
     }
 }
-
-/* ============================= */
-/* DERANK */
-/* ============================= */
 
 function derankUser(name) {
-
     const accs = getAccounts();
-    const index = roleOrder.indexOf(accs[name].role);
-
-    if(index < roleOrder.length - 1) {
-        accs[name].role = roleOrder[index + 1];
+    const i = roleOrder.indexOf(accs[name].role);
+    if(i < roleOrder.length-1) {
+        accs[name].role = roleOrder[i+1];
         saveAccounts(accs);
         renderUsers();
     }
 }
 
-/* ============================= */
-/* INIT */
-/* ============================= */
+/* ================= MITARBEITER ================= */
 
-document.addEventListener("DOMContentLoaded", renderUsers);
+const getMitarbeiter = () =>
+    JSON.parse(localStorage.getItem("bs_mitarbeiter")) || [];
+
+const saveMitarbeiter = data =>
+    localStorage.setItem("bs_mitarbeiter", JSON.stringify(data));
+
+function addMitarbeiter() {
+    const vor = document.getElementById("vorname").value;
+    const nach = document.getElementById("nachname").value;
+    const tel = document.getElementById("telefon").value;
+    const geh = document.getElementById("gehalt").value;
+
+    if(!vor || !nach) return;
+
+    const list = getMitarbeiter();
+    list.push({ vorname:vor, nachname:nach, telefon:tel, gehalt:geh });
+    saveMitarbeiter(list);
+    renderMitarbeiter();
+}
+
+function renderMitarbeiter() {
+    const c = document.getElementById("mitarbeiterList");
+    c.innerHTML = "";
+
+    getMitarbeiter().forEach((m,i)=>{
+        const row = document.createElement("div");
+        row.className = "table-row";
+        row.innerHTML = `
+            <span>${m.vorname} ${m.nachname}</span>
+            <span>${m.telefon}</span>
+            <span>${m.gehalt} €</span>
+            <div style="text-align:right;">
+                <button class="delete-btn" onclick="deleteMitarbeiter(${i})">
+                    Entfernen
+                </button>
+            </div>
+        `;
+        c.appendChild(row);
+    });
+}
+
+function deleteMitarbeiter(i){
+    const list = getMitarbeiter();
+    list.splice(i,1);
+    saveMitarbeiter(list);
+    renderMitarbeiter();
+}
+
+/* ================= ABMELDUNGEN ================= */
+
+function renderAbmeldungen(){
+    const c = document.getElementById("abmList");
+    c.innerHTML = "";
+
+    getAbmeldungen().forEach((a,i)=>{
+        const row = document.createElement("div");
+        row.className="table-row";
+        row.innerHTML=`
+            <span>${a.user}</span>
+            <span>${a.von} - ${a.bis}</span>
+            <span>${a.status}</span>
+            <div style="text-align:right;">
+                ${a.status==="offen"?`
+                <button class="rank-btn" onclick="approveAbm(${i})">✔</button>
+                <button class="delete-btn" onclick="rejectAbm(${i})">✖</button>
+                `:""}
+            </div>
+        `;
+        c.appendChild(row);
+    });
+}
+
+function approveAbm(i){
+    const list=getAbmeldungen();
+    list[i].status="genehmigt";
+    saveAbmeldungen(list);
+    renderAbmeldungen();
+}
+
+function rejectAbm(i){
+    const list=getAbmeldungen();
+    list[i].status="abgelehnt";
+    saveAbmeldungen(list);
+    renderAbmeldungen();
+}
+
+/* INIT */
+document.addEventListener("DOMContentLoaded", ()=>{
+    renderUsers();
+    renderMitarbeiter();
+});
 
 </script>
 
