--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ document.addEventListener("DOMContentLoaded", () => {
     }
 
     document.getElementById("abmCounter").innerText =
-        getAktiveAbmeldungenCount() + " aktiv";
+        getOffeneAbmeldungenCount() + " offen"
 
     document.getElementById("bewerberCounter").innerText =
         getNeueBewerberCount() + " neu";
