--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             <p>Abwesenheiten & Urlaubsanträge.</p>
         </div>
 
+        <div class="panel big" id="meineAbmeldungenPanel">
+            <div class="panel-header">📋 Meine Abmeldungen</div>
+            <div id="meineAbmeldungenList"></div>
+        </div>
+
         <div class="panel big">
             <div class="panel-top">
                 <span class="panel-header">📝 BEWERBER</span>
