--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <title>Burgershot Intern</title>
 <link rel="stylesheet" href="style.css">
 </head>
-    
-    <!-- ================= ABMELDUNG MODAL ================= -->
+
+<body>
+
+<!-- ================= ABMELDUNG MODAL ================= -->
 <div class="modal-backdrop" id="abmModal">
     <div class="modal">
         <h2>📅 Neue Abmeldung</h2>
@@ -19,8 +21,8 @@
         <button onclick="closeAbmModal()">Abbrechen</button>
     </div>
 </div>
-<body>
 
+<!-- ================= HEADER ================= -->
 <header>
     <a href="index.html" class="brand-link">🍔 Burgershot Intern</a>
     <div>
@@ -29,28 +31,33 @@
     </div>
 </header>
 
+<!-- ================= DASHBOARD ================= -->
 <section class="dashboard">
 
     <div class="grid-top">
 
+        <!-- NEWS -->
         <div class="panel big">
             <div class="panel-header">📢 NEWS & INFOS</div>
             <p>Wichtige Ankündigungen.</p>
         </div>
 
+        <!-- ABMELDUNGEN -->
         <div class="panel big" onclick="openAbmModal()">
             <div class="panel-top">
                 <span class="panel-header">📅 ABMELDUNGEN</span>
-                <span id="abmCounter" class="badge">0 aktiv</span>
+                <span id="abmCounter" class="badge">0 offen</span>
             </div>
             <p>Abwesenheiten & Urlaubsanträge.</p>
         </div>
 
-        <div class="panel big" id="meineAbmeldungenPanel">
+        <!-- MEINE ABMELDUNGEN -->
+        <div class="panel big">
             <div class="panel-header">📋 Meine Abmeldungen</div>
             <div id="meineAbmeldungenList"></div>
         </div>
 
+        <!-- BEWERBER -->
         <div class="panel big">
             <div class="panel-top">
                 <span class="panel-header">📝 BEWERBER</span>
@@ -58,8 +65,10 @@
             </div>
             <p>Neue Bewerbungen prüfen.</p>
         </div>
+
     </div>
 
+    <!-- SMALL PANELS -->
     <div class="grid-bottom">
         <div class="panel small">🍔<br>Orders</div>
         <div class="panel small">🛒<br>Lager</div>
@@ -67,6 +76,7 @@
         <div class="panel small">👕<br>Kleidung</div>
     </div>
 
+    <!-- MANAGEMENT BAR -->
     <div id="adminPanel" class="management-bar"
          onclick="location.href='management.html'">
         <div>⭐ Management Center</div>
@@ -75,7 +85,7 @@
 
 </section>
 
-<!-- PIN MODAL -->
+<!-- ================= PIN MODAL ================= -->
 <div class="modal-backdrop" id="pinModal">
     <div class="modal">
         <h2>🔒 PIN ändern</h2>
@@ -85,7 +95,9 @@
     </div>
 </div>
 
+<!-- ================= SCRIPT ================= -->
 <script src="script.js"></script>
+
 <script>
 requireLogin();
 
@@ -99,9 +111,8 @@ document.addEventListener("DOMContentLoaded", () => {
         return;
     }
 
-    renderMeineAbmeldungen();
-
-    document.getElementById("welcomeUser").innerText = "Eingeloggt als: " + user;
+    document.getElementById("welcomeUser").innerText =
+        "Eingeloggt als: " + user;
 
     if (isAdmin()) {
         document.getElementById("adminPanel").style.display = "flex";
@@ -111,14 +122,22 @@ document.addEventListener("DOMContentLoaded", () => {
         document.getElementById("pinModal").classList.add("active");
     }
 
+    // Offene Abmeldungen Counter
     document.getElementById("abmCounter").innerText =
-        getOffeneAbmeldungenCount() + " offen"
+        getOffeneAbmeldungenCount() + " offen";
 
-    document.getElementById("bewerberCounter").innerText =
-        getNeueBewerberCount() + " neu";
+    // Bewerber Counter (falls vorhanden)
+    if (typeof getNeueBewerberCount === "function") {
+        document.getElementById("bewerberCounter").innerText =
+            getNeueBewerberCount() + " neu";
+    }
+
+    renderMeineAbmeldungen();
 });
 
+/* ================= PIN SPEICHERN ================= */
 function savePin() {
+
     const pin = document.getElementById("newPin").value.trim();
     const user = sessionStorage.getItem("loggedInUser");
     const accs = getAccounts();
@@ -130,6 +149,7 @@ function savePin() {
 
     accs[user].password = pin;
     accs[user].isFirstLogin = false;
+
     saveAccounts(accs);
 
     document.getElementById("pinModal").classList.remove("active");
