--- a/index.html
+++ b/index.html
@@ -34,6 +34,33 @@
 <!-- ================= DASHBOARD ================= -->
 <section class="dashboard">
 
+    <!-- ===== DASHBOARD HERO ===== -->
+<div class="dashboard-hero">
+
+    <div class="hero-left">
+        <img src="assets/logo.png" class="hero-logo">
+        <div>
+            <h1>Willkommen bei Burgershot Intern</h1>
+            <p>Teamverwaltung & Organisation auf einen Blick.</p>
+        </div>
+    </div>
+
+    <div class="hero-stats">
+
+        <div class="stat-box">
+            <div class="stat-number" id="statUsers">0</div>
+            <div class="stat-label">Accounts</div>
+        </div>
+
+        <div class="stat-box">
+            <div class="stat-number" id="statOffen">0</div>
+            <div class="stat-label">Offene Abmeldungen</div>
+        </div>
+
+    </div>
+
+</div>
+
     <div class="grid-top">
 
         <!-- NEWS -->
