--- a/index.html
+++ b/index.html
@@ -5,24 +5,8 @@
 <title>Burgershot Intern</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<!-- ================= ABMELDUNG MODAL ================= -->
-<div class="modal-backdrop" id="abmModal">
-    <div class="modal">
-        <h2>📅 Neue Abmeldung</h2>
-
-        <input type="date" id="abmVon">
-        <input type="date" id="abmBis">
-        <input type="text" id="abmGrund" placeholder="Grund">
-
-        <button onclick="submitAbmeldungUI()">Einreichen</button>
-        <button onclick="closeAbmModal()">Abbrechen</button>
-    </div>
-</div>
-
-<!-- ================= HEADER ================= -->
 <header>
     <a href="index.html" class="brand-link">🍔 Burgershot Intern</a>
     <div>
@@ -31,60 +15,23 @@
     </div>
 </header>
 
-<!-- ================= DASHBOARD ================= -->
 <section class="dashboard">
-
-    <!-- ===== DASHBOARD HERO ===== -->
-<div class="dashboard-hero">
-
-    <div class="hero-left">
-        <img src="assets/logo.png" class="hero-logo">
-        <div>
-            <h1>Willkommen bei Burgershot Intern</h1>
-            <p>Teamverwaltung & Organisation auf einen Blick.</p>
-        </div>
-    </div>
-
-    <div class="hero-stats">
-
-        <div class="stat-box">
-            <div class="stat-number" id="statUsers">0</div>
-            <div class="stat-label">Accounts</div>
-        </div>
-
-        <div class="stat-box">
-            <div class="stat-number" id="statOffen">0</div>
-            <div class="stat-label">Offene Abmeldungen</div>
-        </div>
-
-    </div>
-
-</div>
 
     <div class="grid-top">
 
-        <!-- NEWS -->
         <div class="panel big">
             <div class="panel-header">📢 NEWS & INFOS</div>
             <p>Wichtige Ankündigungen.</p>
         </div>
 
-        <!-- ABMELDUNGEN -->
-        <div class="panel big" onclick="openAbmModal()">
+        <div class="panel big">
             <div class="panel-top">
                 <span class="panel-header">📅 ABMELDUNGEN</span>
-                <span id="abmCounter" class="badge">0 offen</span>
+                <span id="abmCounter" class="badge">0 aktiv</span>
             </div>
             <p>Abwesenheiten & Urlaubsanträge.</p>
         </div>
 
-        <!-- MEINE ABMELDUNGEN -->
-        <div class="panel big">
-            <div class="panel-header">📋 Meine Abmeldungen</div>
-            <div id="meineAbmeldungenList"></div>
-        </div>
-
-        <!-- BEWERBER -->
         <div class="panel big">
             <div class="panel-top">
                 <span class="panel-header">📝 BEWERBER</span>
@@ -93,9 +40,12 @@
             <p>Neue Bewerbungen prüfen.</p>
         </div>
 
+        <div class="panel big center">
+            <div class="panel-header">📋 Service</div>
+        </div>
+
     </div>
 
-    <!-- SMALL PANELS -->
     <div class="grid-bottom">
         <div class="panel small">🍔<br>Orders</div>
         <div class="panel small">🛒<br>Lager</div>
@@ -103,7 +53,6 @@
         <div class="panel small">👕<br>Kleidung</div>
     </div>
 
-    <!-- MANAGEMENT BAR -->
     <div id="adminPanel" class="management-bar"
          onclick="location.href='management.html'">
         <div>⭐ Management Center</div>
@@ -112,7 +61,7 @@
 
 </section>
 
-<!-- ================= PIN MODAL ================= -->
+<!-- PIN MODAL -->
 <div class="modal-backdrop" id="pinModal">
     <div class="modal">
         <h2>🔒 PIN ändern</h2>
@@ -122,9 +71,7 @@
     </div>
 </div>
 
-<!-- ================= SCRIPT ================= -->
 <script src="script.js"></script>
-
 <script>
 requireLogin();
 
@@ -138,15 +85,7 @@ document.addEventListener("DOMContentLoaded", () => {
         return;
     }
 
-    // HERO STATS
-document.getElementById("statUsers").innerText =
-    Object.keys(getAccounts()).length;
-
-document.getElementById("statOffen").innerText =
-    getOffeneAbmeldungenCount();
-
-    document.getElementById("welcomeUser").innerText =
-        "Eingeloggt als: " + user;
+    document.getElementById("welcomeUser").innerText = "Eingeloggt als: " + user;
 
     if (isAdmin()) {
         document.getElementById("adminPanel").style.display = "flex";
@@ -156,22 +95,14 @@ document.getElementById("statOffen").innerText =
         document.getElementById("pinModal").classList.add("active");
     }
 
-    // Offene Abmeldungen Counter
     document.getElementById("abmCounter").innerText =
-        getOffeneAbmeldungenCount() + " offen";
+        getAktiveAbmeldungenCount() + " aktiv";
 
-    // Bewerber Counter (falls vorhanden)
-    if (typeof getNeueBewerberCount === "function") {
-        document.getElementById("bewerberCounter").innerText =
-            getNeueBewerberCount() + " neu";
-    }
-
-    renderMeineAbmeldungen();
+    document.getElementById("bewerberCounter").innerText =
+        getNeueBewerberCount() + " neu";
 });
 
-/* ================= PIN SPEICHERN ================= */
 function savePin() {
-
     const pin = document.getElementById("newPin").value.trim();
     const user = sessionStorage.getItem("loggedInUser");
     const accs = getAccounts();
@@ -183,7 +114,6 @@ function savePin() {
 
     accs[user].password = pin;
     accs[user].isFirstLogin = false;
-
     saveAccounts(accs);
 
     document.getElementById("pinModal").classList.remove("active");
